--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
           <div class="nav" role="navigation" aria-label="主要導覽">
             <div class="nav-brand">
               <span class="nav-brand-badge">Frontend Dev</span>
-              <span>Ray Chen · 個人開發者空間</span>
+              <span>Ray Chen</span>
             </div>
 
             <!-- 手機版漢堡選單切換（純 CSS checkbox hack） -->
